@@ -1,4 +1,5 @@
-- Borrow some improvements from sister evolvotron project (e.g VERSION mechanism)
+- Fix river/lake hang for high subdivision levels
+- Borrow some improvements from sister evolvotron project
 - Check for OpenGL errors
 - Add emissive option for oceans and rivers.
 - Add control over heights at which colours switch.
@@ -9,8 +10,6 @@
 - Improve code documentation.
 - Move terrain computation and save into separate threads so interface isn't locked.
 - Permit specification of ambient colour components (for planets with glowing red lava).
-- Rethink GUI.  Make terrain display take up most of main window, with menus to access control dialogs.
+- Rethink GUI.  Make terrain display take up most of main window
+  (or be separate window, disappearing when not rendering?), with menus to access control dialogs.
 - Use Qt file dialog for save.
-- Render parameter fps_target should have dynamic effect, add controls etc
-
-
