@@ -1,0 +1,8 @@
+#!/bin/sh
+
+# Script to echo the current version number.
+# THIS IS THE ONLY PLACE A VERSION NUMBER SHOULD BE SPECIFIED
+
+# NB If you edit this, "make distclean" and then rebuild (./BUILD) as there is no dependency checking
+
+echo "0.0.2-devel"
