@@ -1,0 +1,21 @@
+#!/bin/sh
+
+# Execute this to package up fracplanet as a .tar.gz
+
+VERSION=`./VERSION`
+
+cd ..
+
+FILES_MISC=`ls fracplanet/{README,BUILD,LICENSE,TODO,CHANGES,VERSION,configure,doxygen.cfg,mktgz}`
+
+FILES_H=`find fracplanet -name moc -prune -o -name '*.h' -print`
+FILES_CPP=`find fracplanet -name moc -prune -o -name '*.cpp' -print`
+FILES_PRO=`find fracplanet -name moc -prune -o -name '*.pro' -print`
+
+FILES="$FILES_MISC $FILES_H $FILES_CPP $FILES_PRO"
+
+tar cvfz fracplanet/fracplanet.tar.gz $FILES
+
+echo "***"
+echo "*** Suggestion: mv fracplanet.tar.gz fracplanet-$VERSION.tar.gz"
+echo "***"
